# for-you

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
db/init/: 01-extensions.sql
migrations/: env.py
migrations/versions/: 635ef41389c3_add_preference_audit_columns_to_feed_.py  99272754b1c1_initial_schema.py  ba782991717b_add_scoring_model_version_to_feed_.py
models/: scoring_model.json
scripts/: bootstrap.py  generate_embeddings.py  generate_personas.py  generate_topic_centroids.py  live_trigger.py  rank_feed.py  seed_world.py  simulate.py  train_scorer.py  verify_smoke.py
src/foryou/: __init__.py  bootstrap.py  budget.py  config.py  live.py  seed.py  simulate.py
src/foryou/candidates/: __init__.py  context.py  filters.py  hydrator.py  impressions.py  pipeline.py  preferences.py  protocols.py  scoring.py  selection.py  sources.py  types.py
src/foryou/db/: __init__.py  base.py  enums.py  mixins.py  session.py
src/foryou/embeddings/: __init__.py  encoder.py  generator.py  topic_centroids.py
src/foryou/personas/: __init__.py  content.py  engagement.py  generator.py  llm.py  profiles.py  safety.py
src/foryou/scoring/: __init__.py  dataset.py  model.py  trainer.py
src/foryou/web/: __init__.py  app.py  auth.py  deps.py  schemas.py  serialize.py  trace.py
tests/: candidate_factories.py  conftest.py  test_bootstrap.py  test_budget.py  test_candidates_context.py  test_candidates_filters.py  test_candidates_hydrator.py  test_candidates_impressions.py  test_candidates_pipeline.py  test_candidates_preferences.py  test_candidates_scoring.py  test_candidates_selection.py  test_candidates_sources.py  test_data_layer.py  test_encoder.py  test_generator.py  test_live.py  test_personas_content.py  test_personas_engagement.py  test_personas_generator.py  test_personas_llm.py  test_personas_profiles.py  test_personas_safety.py  test_scoring_dataset.py  test_scoring_model.py  test_scoring_trainer.py  test_seed.py  test_simulate.py  test_topic_centroids.py  test_web_api.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.lib.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/app/: App.module.css  ReaderControls.module.css  ReaderControls.tsx  preferences.ts  useFeed.ts  useOperator.ts
web/src/design-system/: ActionScoreBars.tsx  BudgetMeter.module.css  BudgetMeter.tsx  Composer.module.css  Composer.tsx  FeedCard.module.css  FeedCard.tsx  OperatorLock.module.css  OperatorLock.tsx  PipelinePanel.module.css  PipelinePanel.tsx  format.ts  (+16 more)
(+14 files in other folders)
