[project]
name = "foryou"
version = "0.1.0"
description = "Data layer for the personalized For You algorithm reimplementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "psycopg[binary]>=3.2.3",
    # Local embedding model (all-MiniLM-L6-v2, 384-dim). torch is installed as the
    # CPU-only build in Docker via `uv pip install --torch-backend=cpu` (see Dockerfile).
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foryou"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
# Alembic-generated revisions are machine-written; don't lint their formatting.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pgvector.*", "sentence_transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
